--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <mybatis.version>2.0.1</mybatis.version>
         <mysql.version>5.1.21</mysql.version>
         <druid.version>1.1.9</druid.version>
+        <redis.version>2.1.3.RELEASE</redis.version>
     </properties>
 
     <dependencies>
@@ -77,6 +78,11 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>${redis.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -86,6 +92,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
     </dependencies>
 
