--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,20 +1,37 @@
-
 com.example.study.name=taotao
 server.port=8090
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/taotest01
+spring.datasource.url=jdbc:mysql://106.13.25.147:3306/taotest01
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=wxw260483
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
 spring.datasource.druid.initialSize=10
 spring.datasource.druid.minIdle=5
 spring.datasource.druid.maxActive=60
 spring.datasource.druid.maxWait=500
 logging.config=classpath:logback-spring.xml
 logging.path=/Users/taotao/mycode/log
-
 ## actuator 配置，使用http 方式获取,show-details 是always可以检查数据库等其他
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
+##Sleuth
+spring.application.name=study
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+spring.sleuth.sampler.percentage=15
+# Redis数据库索引（默认为0）
+spring.redis.database=1
+# Redis服务器地址
+spring.redis.host=106.13.223.177
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=baidu123#
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=100
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=10
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=2
+# 连接超时时间（毫秒）
+spring.redis.timeout=30000
