--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -35,3 +35,18 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=2
 # 连接超时时间（毫秒）
 spring.redis.timeout=30000
+
+
+# rabbit
+spring.rabbitmq.addresses=106.13.223.177
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=root
+spring.rabbitmq.password=baidu123#
+
+
+# Spring Session 配置
+spring.session.store-type=redis
+server.servlet.session.persistent=true
+server.servlet.session.timeout=7d
+server.servlet.session.cookie.max-age=7d
+
