自定义功能修改

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -49,4 +49,5 @@ spring.session.store-type=redis
 server.servlet.session.persistent=true
 server.servlet.session.timeout=7d
 server.servlet.session.cookie.max-age=7d
+# CURRENT_TIMESTAMP
 
