--- a/pom.xml
+++ b/pom.xml
@@ -129,9 +129,6 @@
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
-<!--
-            <version>2.2.0.RELEASE</version>
--->
         </dependency>
 
         <!--kaptcha验证码生成器-->
@@ -145,6 +142,13 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.2.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.0.3</version>
         </dependency>
 
     </dependencies>
